--- a/SVC Challenge.ipynb
+++ b/SVC Challenge.ipynb
@@ -362,7 +362,7 @@
     "<H3>Categorizing Recipes</H3><br>\n",
     "Every recipe in this data set comes with a list of categories. The words in these lists vary: there are specific ingredients, geographic features (cities, states, countries), meals, events and holidays, kosher recipes, and other miscellaneous things. In total, there are over 600 unique categories.<br><br>\n",
     "We might expect event and holiday-related recipes to recieve ratings faster than other categories, since they are posted around holidays and are likely used and rated around the same time. If true, this could help us with our predictions later on.<br><br>\n",
-    "In a couple of hours, I was able to split these categories into roughly 30 \"meta-categories.\" I wrote a script to group each recipe into each of these meta-categories, which can help us differentiate cocktail and drink recipes from food recipes, etc."
+    "In a couple of hours, I was able to split these categories into roughly 30 \"meta-categories.\" I wrote <a href>a script</a> to group each recipe into each of these meta-categories, which can help us differentiate cocktail and drink recipes from food recipes, etc."
    ]
   },
   {
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -576,9 +576,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean cross-validated accuracy:  0.905257894623\n",
+      "cross-validation score standard deviation:  0.00187475106032\n"
+     ]
+    }
+   ],
    "source": [
     "X = raw_data[filtered_features]\n",
     "Y = raw_data['no_rating']\n",
@@ -597,9 +606,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "predictions and true value cross-tabulation:\n",
+      " no_rating     0    1\n",
+      "row_0               \n",
+      "0          8695  604\n",
+      "1           396  338\n",
+      "overall accuracy:\n",
+      " 0.900328914582\n"
+     ]
+    }
+   ],
    "source": [
     "cutoff = int(.5 * len(raw_data))\n",
     "train = raw_data[:cutoff]\n",
@@ -620,9 +643,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Proportion of nonzero ratings in test set:  0.9061098375361307\n"
+     ]
+    }
+   ],
    "source": [
     "test_imb = 1 - test.no_rating.sum()/len(test)\n",
     "print('Proportion of nonzero ratings in test set: ', test_imb)"
